--- a/overrides/package.json
+++ b/overrides/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "docz:start": "docz dev",
+    "docz:build": "docz build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "In The Pocket",
