add postcss and precess for design-docs

--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "webpack-dev-server --open  --config webpack.dev.config.js",
     "build": "webpack --config webpack.prod.config.js",
+    "stylelint": "stylelint \"**/*.css\" --fix",
     "postinstall": "npm run build"
   },
   "keywords": [
@@ -23,21 +24,27 @@
     "babel-plugin-styled-components": "^1.5.1",
     "copy-webpack-plugin": "^4.5.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "postcss": "^7.0.2",
+    "postcss-custom-properties": "^7.0.0",
+    "postcss-import": "^12.0.0",
+    "postcss-nested-import": "^0.1.0",
+    "precss": "^3.1.2",
     "raw-loader": "^0.5.1",
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0",
     "webpack": "^4.17.1",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "*"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7",
+    "webpack-merge": "^4.1.4"
   },
   "peerDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "dependencies": {
-    "@inthepocket/itp-rcc-collapse": "^0.0.4",
+    "@inthepocket/itp-rcc-collapse": "^0.0.1",
     "catalog": "^3.5.5",
     "styled-components": "^3.4.5"
-  },
-  "publishConfig": {
-    "registry": "http://localhost:4873"
   }
 }
