--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.5.0",
     "lerna": "^3.1.4",
+    "postcss": "^7.0.2",
+    "postcss-import": "^12.0.0",
+    "precss": "^3.1.2",
     "raw-loader": "^0.5.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "style-loader": "^0.22.1",
-    "webpack": "^4.17.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.1.4"
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "dependencies": {},
   "config": {
