--- a/packages/itp-rcc-collapse/package.json
+++ b/packages/itp-rcc-collapse/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inthepocket/itp-rcc-collapse",
-  "version": "0.0.4",
+  "version": "0.0.1",
   "description": "ITP Collapse base component",
   "main": "lib/index.js",
   "scripts": {
@@ -23,7 +23,9 @@
   "license": "MIT",
   "devDependencies": {
     "webpack": "^4.17.1",
-    "webpack-merge": "*"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.7",
+    "webpack-merge": "^4.1.4"
   },
   "peerDependencies": {
     "react": "^16.4.1"
@@ -32,6 +34,6 @@
     "rc-collapse": "^1.10.0"
   },
   "publishConfig": {
-    "registry": "http://localhost:4873"
+    "access": "public"
   }
 }
