--- a/packages/create-itp-react-app/package.json
+++ b/packages/create-itp-react-app/package.json
@@ -4,16 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "itp-react-scripts lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "In The Pocket",
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.1",
     "shelljs": "^0.8.2"
-  },
-  "devDependencies": {
-    "@inthepocket/itp-react-scripts": "^0.44.2"
   }
 }
