add configOutputDir to .sketchexport config

--- a/packages/create-itp-react-app/templates/.sketchxport/config.json
+++ b/packages/create-itp-react-app/templates/.sketchxport/config.json
@@ -4,6 +4,7 @@
     "uri": "inthepocket/<repo-slug-here>"
   },
   "sketchxport": {
-    "assetsOutputDir": "src/common/assets/images"
+    "assetsOutputDir": "src/common/assets/images",
+    "configOutputDir": ""
   }
 }
