--- a/packages/create-itp-react-app/package.json
+++ b/packages/create-itp-react-app/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "In The Pocket",
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.1",
+    "replace-in-file": "^3.4.2",
     "shelljs": "^0.8.2"
   }
 }
