--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,13 +1,17 @@
 {
-  'ignore': [
-      "packages/create-itp-react-app/templates/.eslintrc"
-    ],
-  '**/*.+(js|json|less|css|ts|tsx|md)': [
-    "itp-react-scripts format",
-    "git add"
-  ],
-  "**/*.js": [
-    "itp-react-scripts lint --fix",
-    "git add"
-  ],
+  "lint-staged": {
+    "ignore": [
+        "packages/create-itp-react-app/templates/.eslintrc"
+      ],
+      "linters": {
+        '**/*.+(js|json|less|css|ts|tsx|md)': [
+          "itp-react-scripts format",
+          "git add"
+        ],
+      "**/*.js": [
+        "itp-react-scripts lint --fix",
+        "git add"
+      ],
+    }
+  }
 }
