--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "itp-react-scripts format",
+    "format:fix": "npm run format -- --write",
     "lint": "itp-react-scripts lint",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "itp-react-scripts precommit",
@@ -17,7 +19,6 @@
   "author": "hello@inthepocket.com",
   "license": "MIT",
   "devDependencies": {
-    "@inthepocket/itp-react-scripts": "^0.44.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-env": "^2.4.1",
