--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "hello@inthepocket.com",
   "license": "MIT",
   "devDependencies": {
+    "@inthepocket/itp-react-scripts": "^0.46.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-env": "^2.4.1",
@@ -47,5 +48,6 @@
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "dependencies": {}
 }
