add prompts, ask for sketchFilePath

--- a/packages/create-itp-react-app/templates/.sketchxport/config.json
+++ b/packages/create-itp-react-app/templates/.sketchxport/config.json
@@ -1,4 +1,7 @@
 {
+  "commit": {
+    "sketchFilePath": ""
+  },
   "repo": {
     "commitMessage": "Updated assets & config",
     "uri": "inthepocket/<repo-slug-here>"
