--- a/packages/create-itp-react-app/package.json
+++ b/packages/create-itp-react-app/package.json
@@ -22,6 +22,8 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.1",
+    "change-case": "^3.0.2",
+    "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
     "shelljs": "^0.8.2"
   },
