--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "@inthepocket/design-docs",
-  "version": "0.0.1",
-  "private": true,
+  "name": "design-docs",
   "description": "ITP React component docs",
+  "dependencies": {
+    "@inthepocket/itp-rcc-button": "^0.0.1",
+    "@inthepocket/itp-rcc-collapse": "^0.0.1",
+    "catalog": "^3.0.0-rc.4",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1"
+  },
   "scripts": {
-    "start": "webpack-dev-server --open  --config webpack.dev.config.js",
-    "build": "webpack --config webpack.prod.config.js",
-    "stylelint": "stylelint \"**/*.css\" --fix"
+    "start": "catalog start",
+    "build": "catalog build"
   },
   "keywords": [
     "react",
@@ -18,30 +22,5 @@
     "name": "In The Pocket NV",
     "url": "https://inthepocket.com"
   },
-  "license": "MIT",
-  "peerDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
-  },
-  "devDependencies": {
-    "stylelint": "^9.5.0",
-    "stylelint-config-standard": "^18.2.0"
-  },
-  "dependencies": {
-    "@inthepocket/itp-rcc-button": "^0.0.1",
-    "@inthepocket/itp-rcc-collapse": "^0.0.1",
-    "catalog": "^3.5.5",
-    "copy-webpack-plugin": "^4.5.2",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.2",
-    "postcss": "^7.0.2",
-    "postcss-import": "^12.0.0",
-    "postcss-nested-import": "^0.1.0",
-    "precss": "^3.1.2",
-    "raw-loader": "^0.5.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-merge": "^4.1.4"
-  }
+  "license": "MIT"
 }
