--- a/packages/create-itp-react-app/package.json
+++ b/packages/create-itp-react-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inthepocket/create-itp-react-app",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,12 +26,10 @@
     "change-case": "^3.0.2",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
-    "shelljs": "^0.8.2"
+    "shelljs": "^0.8.2",
+    "recursive-copy": "^2.0.9"
   },
   "publishConfig": {
     "access": "public"
-  },
-  "devDependencies": {
-    "recursive-copy": "^2.0.9"
   }
 }
