create-itp-react-app: root.json & root.css script

--- a/packages/create-itp-react-app/templates/app/.sketchxport/config.json
+++ b/packages/create-itp-react-app/templates/app/.sketchxport/config.json
@@ -1,6 +1,6 @@
 {
   "commit": {
-    "sketchFilePath": ""
+    "sketchfilePath": ""
   },
   "repo": {
     "commitMessage": "Updated assets & config",
