--- a/packages/itp-rcc-card/package.json
+++ b/packages/itp-rcc-card/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "test:update": "jest --updateSnapshot",
     "build": "tsc",
     "prepublishOnly": "npm run build"
   },
