rename existing sketchport to hubble

--- a/packages/create-itp-react-app/templates/app/.hubble/config.json
+++ b/packages/create-itp-react-app/templates/app/.hubble/config.json
@@ -6,7 +6,7 @@
     "commitMessage": "Updated assets & config",
     "uri": "inthepocket/<repo-slug-here>"
   },
-  "sketchxport": {
+  "hubble": {
     "assetsOutputDir": "design-docs/assets/images",
     "configOutputDir": ""
   }
