--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -2,6 +2,7 @@
   "name": "design-docs",
   "description": "ITP React component docs",
   "dependencies": {
+    "@inthepocket/itp-rcc-alert": "^0.0.1",
     "@inthepocket/itp-rcc-button": "^0.0.2",
     "@inthepocket/itp-rcc-collapse": "^0.0.2",
     "catalog": "^3.0.0-rc.4",
