--- a/packages/itp-rcc-autocomplete/package.json
+++ b/packages/itp-rcc-autocomplete/package.json
@@ -6,7 +6,7 @@
   "types": "dist/AutoComplete.d.ts",
   "scripts": {
     "test": "jest --env=jsdom",
-    "test:update": "jest --updateSnapshot",
+    "test:update": "jest --env=jsdom --updateSnapshot",
     "build": "tsc",
     "prepublishOnly": "npm run build"
   },
