update generator to be in line with new hubble-mirror version

--- a/packages/design-docs/package.json
+++ b/packages/design-docs/package.json
@@ -2,7 +2,8 @@
   "name": "design-docs",
   "description": "ITP React component docs",
   "dependencies": {
-    "@inthepocket/itp-rcc-alert": "^0.0.1",
+    "@inthepocket/itp-rcc-alert": "0.0.1",
+    "@inthepocket/itp-rcc-autocomplete": "0.0.3",
     "@inthepocket/itp-rcc-button": "0.0.7",
     "@inthepocket/itp-rcc-card": "0.0.3",
     "@inthepocket/itp-rcc-collapse": "^0.0.2",
