--- a/packages/create-itp-react-app/templates/app/.eslintrc
+++ b/packages/create-itp-react-app/templates/app/.eslintrc
@@ -1,5 +1,6 @@
 {
     "extends": "./node_modules/@inthepocket/itp-react-scripts/dist/config/eslintrc.js",
+    "parser": "babel-eslint",
     "rules": {
         "react/prop-types": "off",
         "prefer-destructuring": "off",
