--- a/packages/itp-rcc-alert/package.json
+++ b/packages/itp-rcc-alert/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "@inthepocket/itp-rcc-button": "0.0.7",
     "capitalize": "^2.0.0",
-    "classnames": "^2.2.6",
+    "classnames": "^2.2.6"
+  },
+  "peerDependencies": {
     "react": "^16.6.3"
   },
   "devDependencies": {
@@ -33,7 +35,6 @@
     "@types/node": "^10.12.14",
     "@types/react-test-renderer": "^16.0.3",
     "babel-core": "^6.26.3",
-    "jest": "^23.6.0",
     "react-test-renderer": "^16.6.3",
     "ts-jest": "^23.10.5",
     "typescript": "^3.2.2"
