itp-rcc-button: use pascalCase instead of capitalize

--- a/packages/itp-rcc-button/package.json
+++ b/packages/itp-rcc-button/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "pascal-case": "^2.0.1",
     "prop-types": "^15.6.2",
     "rc-collapse": "^1.10.0"
   },
