--- a/packages/create-itp-react-app/package.json
+++ b/packages/create-itp-react-app/package.json
@@ -22,12 +22,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.4.1",
-    "change-case": "^3.0.2",
+    "chalk": "^2.4.2",
+    "change-case": "^3.1.0",
     "prompt": "^1.0.0",
-    "replace-in-file": "^3.4.2",
-    "shelljs": "^0.8.2",
-    "recursive-copy": "^2.0.9"
+    "recursive-copy": "^2.0.10",
+    "replace-in-file": "^3.4.4",
+    "shelljs": "^0.8.3"
   },
   "publishConfig": {
     "access": "public"
