cira: update hubble settings to latest way of working & implement variables into app template

--- a/packages/create-itp-react-app/templates/app/.stylelintrc
+++ b/packages/create-itp-react-app/templates/app/.stylelintrc
@@ -1,6 +1,6 @@
 {
   "extends": "stylelint-config-itp",
-  "ignoreFiles": ["src/root.css"],
+  "ignoreFiles": ["hubble/*.css"],
   "plugins": [],
   "rules": {}
 }
